--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,10 @@ body{
     font-family: 'Raleway', sans-serif;
     width: 100%;
 }
+p{
+    line-height: 2rem;
+    font-weight: 599;
+}
 header{
     height:100vh;
     background: linear-gradient(rgba(0,0,0,0.63),rgba(0,0,0,0.5)),url(../images/m.jpg)no-repeat top center/cover;
